@@ -1,5 +1,0 @@
-$NetBSD: distinfo,v 1.1.1.1 2008/11/28 14:32:55 he Exp $
-
-SHA1 (XML-SAX-Base-1.02.tar.gz) = ba7def460301b818dc49db197720c8b032e7fe24
-RMD160 (XML-SAX-Base-1.02.tar.gz) = 67b6de607022f9b008ecb3803f6a17c443daced5
-Size (XML-SAX-Base-1.02.tar.gz) = 21148 bytes
